--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -320,14 +320,13 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
     (global-set-key (kbd "C-c .") 'org-time-stamp) ;; insert timestamp everywhere with 'C-c .'
     (global-set-key (kbd "C-c b") 'org-switchb) ;; switch between org buffers with 'C-c b'
 
-    (with-eval-after-load-feature (org-mode org-clock apt-utils)
+    (with-eval-after-load-feature (org org-clock apt-utils)
       ;; http://orgmode.org/manual/Clocking-work-time.html
       (setq org-clock-persist t)
       (org-clock-persistence-insinuate)
 
       ;; a link type to show debian's package info using apt-utils-mode
       (when (require 'apt-utils nil 'noerror)
-        (require 'org)
         (defun org-deb-open (package)
           (apt-utils-show-package-1 package t nil))
         (org-add-link-type "deb" 'org-deb-open))))
