--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -332,6 +332,7 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
         (org-add-link-type "deb" 'org-deb-open))))
   (org-reload)
 #+END_SRC
+** Custom link types
 ** Capture
 Press =Ctrl-C r= to quickly create:
 - task
