--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -333,6 +333,11 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
   (org-reload)
 #+END_SRC
 ** Custom link types
+#+BEGIN_SRC emacs-lisp
+  (dolist (list '(("emacswiki" . "http://www.emacswiki.org/emacs/%s")
+                  ("wikemacs" . "https://wikemacs.org/wiki/%s")))
+    (add-to-list 'org-link-abbrev-alist list))
+#+END_SRC
 ** Capture
 Press =Ctrl-C r= to quickly create:
 - task
