--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -327,7 +327,6 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
   (el-get-bundle org-mode
     :checkout "release_8.3.1" :checksum "003a0f10695f035e844d844eacb1a86a6d2df934"
 
-    (global-set-key (kbd "C-c a") 'org-agenda)
     (global-set-key (kbd "C-c r") 'org-capture) ;; capture with C-c r
     (global-set-key (kbd "C-c .") 'org-time-stamp) ;; insert timestamp everywhere with 'C-c .'
     (global-set-key (kbd "C-c b") 'org-switchb) ;; switch between org buffers with 'C-c b'
@@ -343,6 +342,16 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
           (apt-utils-show-package-1 package t nil))
         (org-add-link-type "deb" 'org-deb-open))))
   (org-reload)
+#+END_SRC
+** Agenda
+Define a keyboard shortcut to dispatch agenda commands to collect entries to the agenda buffer:
+#+BEGIN_SRC emacs-lisp
+  (global-set-key (kbd "C-c a") 'org-agenda)
+#+END_SRC
+
+Start the overview always on the current day and not on the weekday:
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-start-on-weekday nil)
 #+END_SRC
 ** Custom link types
 #+BEGIN_SRC emacs-lisp
