--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -490,6 +490,14 @@ Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] p
 #+BEGIN_SRC emacs-lisp
   (el-get 'sync)
 #+END_SRC
+* File formats
+** systemd configuration files
+#+BEGIN_SRC emacs-lisp
+  (add-to-list 'auto-mode-alist '("\\.service$" . conf-mode))
+#+END_SRC
+*** TODO Use for other file extensions and locations
+- =.target=, =.socket=, =.link= and some others are valid systemd configuration files' extensions;
+- files are in [[file:/usr/lib/systemd]], [[file:/lib/systemd]] and some other places.
 * Tips and tricks
 ** Show the log of recent logs
 The buffer *Messages* is an Emacs' log with a lot of information about whats going on under the hood. The dumb way to swith to this buffer is to treat it as any other buffer and =M-x switch-to-buffer= and select it. Using a default keybinding =C-h e= will show this buffer but without switching to it.
