--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -63,6 +63,12 @@ And finally enable desktop mode:
 #+BEGIN_SRC emacs-lisp
   (desktop-save-mode 1)
 #+END_SRC
+* TODO Mode line
+- [[github:Malabarba/smart-mode-line]]
+
+There are two forks of original [[emacswiki:powerline.el]] (references [[github:yuanotes/powerline]], now unavailable):
+- [[github:milkypostman/powerline]] receiving updates from time to time, at least;
+- [[github:jonathanchu/emacs-powerline]] seems abandoned with latest commit on <2014-12-04 Thu> (or it is feature-complete, just works and needs no updates to fix bugs and add new features).
 * Helm
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle helm
