--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -486,9 +486,8 @@ Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] p
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle swiper)
   (el-get-bundle iedit :type http :url "https://raw.githubusercontent.com/emacsmirror/emacswiki.org/master/iedit.el")
-  (el-get-bundle lispy
-    :checkout "0.26.0"
-    (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1))))
+  (el-get-bundle lispy :checkout "0.26.0")
+  (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1)))
 #+END_SRC
 ** TODO Missing dependency lispy -> swiper 		     :bug:dependency:
 * Install other packages
