--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -500,6 +500,7 @@ Another option is [[github:kuanyui/copy-as-org-mode]] which allows to copy the c
 Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] package:
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle swiper)
+  (el-get-bundle avy)
   (el-get-bundle iedit :type http :url "https://raw.githubusercontent.com/emacsmirror/emacswiki.org/master/iedit.el")
   (el-get-bundle lispy :checkout "0.26.0")
   (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1)))
