--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -407,6 +407,11 @@ Highlight the agenda line under cursor:
 #+BEGIN_SRC emacs-lisp
   (add-hook 'org-agenda-mode-hook (lambda () (hl-line-mode 1)))
 #+END_SRC
+
+All files in a default location to look for Org files will be used for agenda display:
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-files `(,org-directory))
+#+END_SRC
 ** Custom link types
 *** Wikisites dedicated to Emacs
 #+BEGIN_SRC emacs-lisp
