--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -438,15 +438,16 @@ All files in a default location to look for Org files will be used for agenda di
     (add-to-list 'org-link-abbrev-alist list))
 #+END_SRC
 *** Debian package
+To add link to Debian package, use =deb:= link type followed by package's name, i.e. =deb:python3-minimal=. Opening such link will show package's details with =apt-utils-show-package= (from =apt-utils= feature provided by [[deb:debian-el]] package).
 #+BEGIN_SRC emacs-lisp
   (with-eval-after-load-feature (org)
-      (defun org-deb-open (package)
-        (when (require 'apt-utils nil 'noerror)
-          (apt-utils-show-package-1 package t nil)))
-      (org-add-link-type "deb" 'org-deb-open))
+    (defun org-deb-open (package)
+      (if (require 'apt-utils nil 'noerror)
+          (apt-utils-show-package-1 package t nil)
+        (message (format "Unable to open 'deb:%s' link: Debian package debian-el is required" package))))
+    (org-add-link-type "deb" 'org-deb-open))
 #+END_SRC
-**** TODO Do something if apt-utils is unavailable
-For now, its a noop and will break exporting such links.
+**** TODO Provide completion for package name
 ** A cleaner presentation
 - all lines are prefixed for display with the necessary amount of space;
 - all headlines are prefixed with additional stars, so that the amount of indentation shifts by =org-indent-indentation-per-level= spaces per level;
