--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -402,6 +402,11 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
       (org-clock-persistence-insinuate)))
   (org-reload)
 #+END_SRC
+** TODO Don't tolerate trailing whitespace in Org files
+#+BEGIN_SRC emacs-lisp :tangle no
+  (add-hook 'org-mode-hook
+            '(add-hook 'before-save-hook 'delete-trailing-whitespace))
+#+END_SRC
 ** Agenda
 Define a keyboard shortcut to dispatch agenda commands to collect entries to the agenda buffer:
 #+BEGIN_SRC emacs-lisp
