--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -120,6 +120,17 @@ Use Helm to switch between buffers:
         url-gateway-method 'socks)
 #+END_SRC
 ** TODO Set proxies conditionally
+** TODO Check [[info:emacs-gnutls][Emacs GnuTLS]]
+#+BEGIN_QUOTE
+The GnuTLS library is an optional add-on for Emacs. Through it, any Emacs Lisp program can establish encrypted network connections that use "Secure Socket Layer" (SSL) and "Transport Layer Security" (TLS) protocols.  The process of using SSL and TLS in establishing connections is as automated and transparent as possible.
+#+END_QUOTE
+** TODO Review =tls-program= variable
+Default list of commands is dangerous as it uses =--insecure= flag when invoking =gnutls-cli= program:
+#+BEGIN_SRC emacs-lisp :tangle no
+  ("gnutls-cli --insecure -p %p %h"
+   "gnutls-cli --insecure -p %p %h --protocols ssl3"
+   "openssl s_client -connect %h:%p -no_ssl2 -ign_eof")
+#+END_SRC
 * Communications
 ** Stack Exchange
 [[github:vermiculus/sx.el][SX]] provides a versatile experience for the Stack Exchange network within Emacs itself.
@@ -138,13 +149,6 @@ When using the stackexchange client for Emacs, I notice this every time in the *
  Opening TLS connection to `api.stackexchange.com'...done
 #+END_QUOTE
 Another option is to switch to the built-in GnuTLS integration.
-*** TODO Review =tls-program= variable
-Default list of commands is dangerous as it uses =--insecure= flag when invoking =gnutls-cli= program:
-#+BEGIN_SRC emacs-lisp :tangle no
-  ("gnutls-cli --insecure -p %p %h"
-   "gnutls-cli --insecure -p %p %h --protocols ssl3"
-   "openssl s_client -connect %h:%p -no_ssl2 -ign_eof")
-#+END_SRC
 ** TODO Integrate different messaging systems under one umbrella?
 - Gnus already provides some backends for working with e-mails, news, RSS;
 - Stack Exchange;
