--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -220,6 +220,12 @@ With el-get it is not possible to extend existing package's dependencies, so jus
 
   (el-get-bundle magit-view-file)
 #+END_SRC
+
+When committing, show a diff at the bottom of the commit buffer just to remind me of what is going to be committed:
+#+BEGIN_SRC emacs-lisp
+  (with-eval-after-load-feature (magit-commit)
+    (add-to-list 'magit-commit-arguments "--verbose"))
+#+END_SRC
 *** TODO Why upgrading to 2.2.0
 ** Integrate Vcsh and Magit
    - open directory [[/vcsh:emacs:.emacs.d/]] or a file [[/vcsh:emacs:.emacs.d/init.el]]
